@@ -1,0 +1,56 @@
+<?php
+/*
+Plugin Name: CommonFunctions
+Plugin URI: https://github.com/projectestac/agora_nodes
+Description: A pluggin to include common functions which affects to all themes
+Version: 1.0
+Author: Àrea TAC - Departament d'Ensenyament de Catalunya
+*/
+
+/**
+ * Hide screen option's items. Best for usability
+ * @author Sara Arjona
+ */
+function common_hidden_meta_boxes($hidden) {
+	$hidden[] = 'authordiv';
+	$hidden[] = 'commentsdiv';
+	$hidden[] = 'commentstatusdiv';
+	$hidden[] = 'layout_meta';
+	$hidden[] = 'slugdiv';
+	$hidden[] = 'revisionsdiv';
+	return $hidden;
+}
+
+add_filter('hidden_meta_boxes', 'common_hidden_meta_boxes');
+
+
+/**
+ * Remove screen options from posts to simplify user experience
+ * @author Xavi Meler
+ */
+function remove_post_meta_boxes() {
+	remove_meta_box('trackbacksdiv', 'post', 'normal');
+	remove_meta_box('trackbacksdiv', 'post', 'side');
+	remove_meta_box('formatdiv', 'post', 'normal');
+	remove_meta_box('formatdiv', 'post', 'side');
+	remove_meta_box('postcustom', 'post', 'normal');
+	remove_meta_box('postcustom', 'post', 'side');
+	remove_meta_box('rawhtml_meta_box', 'post', 'side');
+	remove_meta_box('rawhtml_meta_box', 'post', 'normal');
+	remove_meta_box('layout_meta', 'post', 'side');
+	remove_meta_box('layout_meta', 'post', 'normal');
+}
+
+add_action('do_meta_boxes', 'remove_post_meta_boxes');
+
+/**
+ * Remove screen options from pages to simplify user experience
+ * @author Xavi Meler
+ */
+function remove_page_meta_boxes() {
+	remove_meta_box('rawhtml_meta_box', 'page', 'side');
+	remove_meta_box('postcustom', 'page', 'normal');
+	remove_meta_box('postimagediv', 'page', 'side');
+}
+
+add_action('do_meta_boxes', 'remove_page_meta_boxes');
